[workspace]
resolver = "2"

members = [
  "actors/*",
  "interfaces/*/rust",
 # "capability_providers/*",
]

default-members = [
  "actors/*",
  "interfaces/*/rust",
 # "capability_providers/*",
]
exclude = ["ui/rust_new","capability_providers"]


[profile.release]
# Optimize for small code size
#opt-level = "s"
#lto = true
debug = true

[patch.crates-io]
wasmbus-rpc= {git ="https://github.com/wasmCloud/weld", rev="8a056a18cd3f80df05de5d13d31e9a5878ceb3a5"}
wasmbus-macros= {git ="https://github.com/wasmCloud/weld", rev="8a056a18cd3f80df05de5d13d31e9a5878ceb3a5"}
getrandom = {path="wasmcloud_patches/getrandom"}

[patch."https://github.com/bevyengine/bevy"]
bevy_app = {path="wasmcloud_patches/bevy_app"}
bevy_internal = {path="wasmcloud_patches/bevy_internal"}
bevy_render = {path="wasmcloud_patches/bevy_render"}
bevy_time = {path="wasmcloud_patches/bevy_time"}