[package]
name = "gateway_caller"
version = "0.1.0"
authors = ["Alan Poon <alan.poon@shopee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.62"
serdeconv = "0.4.0"
gateway_interface = { path = "../interfaces/gateway"}