[workspace]

resolver = "2"

members = [
  "crates/adapters/*",
  "crates/components/*",
  "crates/plugins/*",
  "crates/apps/*",
  "crates/libs/*",
  "crates/tests/*",
]

default-members = [
  "crates/adapters/*",
  "crates/components/*",
  "crates/plugins/*",
  "crates/apps/*",
]

[patch.crates-io]
bevy_ecs = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d",default-features = false}
bevy = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d",default-features = false}