[package]
name = "qq_party_shared"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#actor = ["bevy_ecs_wasm"]
#non_actor = ["bevy_ecs"]

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
bevy = { git="https://github.com/bevyengine/bevy",rev="b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", default-features = false }
#bevy_ecs_wasm = {git = "https://github.com/alanpoon/bevy-ecs-wasm06",optional = true}
#bevy_ecs = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d",default-features = false}
#bevy_math = { git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d"}
#bevy_log = { git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d"}
#bevy_transform = { git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d"}

#bevy_ecs = {version = "=0.8.0",default-features = false}
#bevy_math = {version = "=0.8.0"}
#bevy_log = { version = "=0.8.0"}
#bevy_transform = { version = "=0.8.0"}

#bevy_rapier2d = { git = "https://github.com/alanpoon/bevy_rapier", rev = "61eefc3339c1e4cc7419ed7676fb9f0f6e386583" }
#bevy_rapier2d = { path ="/home/alanpoon/Documents/rust/bevy_stuff/bevy_rapier/bevy_rapier2d" }
#bevy = { version = "=0.8.0", default-features = false }
bevy_rapier2d = { git = "https://github.com/alanpoon/bevy_rapier", rev = "777ed4f493d2f15ddf8f025e25ae81c7b33f6f5e" }
#bevy_rapier2d = { path = "/home/alanpoon/Documents/rust/bevy_stuff/bevy_rapier2/bevy_rapier2d" }