[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "macos_host"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
structopt = "0.3.21"
wasmcloud-host = {path="../../wasmCloud/crates/wasmcloud-host"}
nats = "0.8.6"
provider-archive = "0.3.1"
actix-rt = "1.1.1"
log = "0.4.11"