[package]
name = "qq_party_shared"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
actor = []
non_actor = ["bevy_ecs"]

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
bevy_networking_turbulence = { version = "0.3.0", default-features = false, features = ["use-webrtc"] }
bevy_ecs_wasm = {git = "https://github.com/UnlimitedHugs/bevy-ecs-wasm"}
bevy_math = { version = "0.5.0", default-features = false }
bevy_ecs = { version = "0.5.0", default-features = false,optional = true }