[package]
name = "game_logic"
version = "0.1.0"
authors = ["alanpoon"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmbus-rpc = "=0.5.2"
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde = { version = "1.0.123", features = ["derive"]}
serde_json = "1.0.64"
wasmcloud-interface-logging = "0.2.0"
wasmcloud-interface-messaging = "0.2.0"
wasmcloud-interface-thread = { path = "../../interfaces/thread/rust"}
convert_case = "0.1.0"
#bevy_ecs_wasm = {git = "https://github.com/UnlimitedHugs/bevy-ecs-wasm"}
#bevy_ecs = {version = "0.50"}
lazy_static = "1.4.0"
qq_party_shared = {path = "../../shared" , features = ["actor"]}
