[package]
name = "game_logic2"
version = "0.1.0"
authors = ["alanpoon"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmbus-rpc = "=0.9.2"
async-trait = "0.1"
serde_bytes = "0.11"
serde = { version = "1.0.123", features = ["derive"]}
futures = "0.3"
wasmcloud-interface-logging = "=0.6.0"
wasmcloud-interface-messaging = "=0.6.0"
wasmcloud-interface-numbergen = "=0.6.0"
wasmcloud-interface-thread = { path = "../../interfaces/thread/rust"}
convert_case = "0.1.0"
lazy_static = "1.4.0"
qq_party_shared = {path = "../../qq_party_shared"}
bevy = { git="https://github.com/bevyengine/bevy",rev="b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", default-features = false }
bevy_rapier2d = { git = "https://github.com/alanpoon/bevy_rapier", rev = "777ed4f493d2f15ddf8f025e25ae81c7b33f6f5e" }
rmp-serde = "1.1.0"