[package]
name = "room_mgr"
version = "0.0.1"
authors = ["Alan Poon <brightshadowx@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
actor-core = { path = "../../../actor-interfaces/rust/actor-core" ,features=["guest"]}
actor-messaging = { path = "../../../actor-interfaces/rust/messaging" }
actor-logging = { path = "../../../actor-interfaces/rust/logging",features=["guest"] }
log = "0.4.8"
qqparty-protocol = { path = "../../protocol"}
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
bincode = "1.3.1"

[profile.release]
# Optimize for small code size
opt-level = "s"