[package]
name = "room_mgr"
version = "0.0.1"
authors = ["Alan Poon <brightshadowx@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
wasmcloud-actor-core = { path = "../../../actor-interfaces/actor-core/rust/wasmcloud-actor-core", features = ["guest"] }
wasmcloud-actor-logging = { path = "../../../actor-interfaces/logging/rust", features = ["guest"] }
wasmcloud-actor-messaging = { path = "../../../actor-interfaces/messaging/rust", features = ["guest"] }
wasmcloud-actor-telnet = { path = "../../../actor-interfaces/telnet/rust", features = ["guest"] }
log = "0.4.8"
qqparty-protocol = { path = "../../protocol"}
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
bincode = "1.3.1"
telnet = "0.1.4"

[profile.release]
# Optimize for small code size
opt-level = "s"