[package]
name = "web_server"
version = "0.1.0"
authors = ["alanpoon"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.123", features = ["derive"]}
serde_json = "1.0.64"
log = "0.4.14"
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }
wasmcloud-actor-logging = { version = "0.1.1", features = ["guest"] }
wasmcloud-actor-keyvalue = { version = "0.2.1", features = ["guest"]}
wasmcloud-actor-http-server = { version = "0.1.0", features = ["guest"]}
lazy_static = "1.4.0"

[build-dependencies]
actix-web-static-files = "3.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true