[package]
name = "game-provider"
version = "0.0.1"
authors = ["Alan Poon <brightshadowx@gmail.com>"]
edition = "2018"

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
wasmbus-rpc = "0.5.2"
async-trait = "0.1"
log = "0.4.8"
env_logger = "0.8.3"
lazy_static = "1.4.0"
wasmcloud-interface-thread = { path = "../../interfaces/thread/rust"}
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }

[dependencies.wasmcloud-provider-core]
version = "0.1.0"