[package]
name = "bevy_app"
version = "0.6.0"
edition = "2021"
description = "Provides core App functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
bevy_ci_testing = ["serde", "ron"]
default = ["bevy_reflect"]

[dependencies]
# bevy
bevy_derive = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab" }
bevy_ecs = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab" }
bevy_reflect = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab", optional = true }
bevy_utils = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab"}

# other
serde = { version = "1.0", features = ["derive"], optional = true }
ron = { version = "0.7.0", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [ "Window" ] }

[dev-dependencies]
# bevy
bevy_log = { path = "../bevy_log", version = "0.6.0" }
