[package]
name = "bevy_app"
version = "0.8.1"
edition = "2021"
description = "Provides core App functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
bevy_ci_testing = ["serde", "ron"]
default = ["bevy_reflect"]
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]

[dependencies]
# bevy
bevy_derive = { git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", version = "0.8.1" }
bevy_ecs = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", version = "0.8.1", default-features = false }
bevy_reflect = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d",  version = "0.8.1", optional = true }
bevy_utils = {git="https://github.com/bevyengine/bevy",rev = "b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", version = "0.8.1" }



# other
serde = { version = "1.0", features = ["derive"], optional = true }
ron = { version = "0.7.0", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = [ "Window" ] }

