[package]
name = "desk-plugin-audio"
version = "0.1.0"
authors = ["Alanpoon <brightshadowx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0" }
qq_party_shared = { path = "../../../../qq_party_shared" }
bevy_kira_audio = "0.8.0"