[package]
name = "desk-plugin-fly-camera"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "desk-plugin-core", path = "../core", version = "0.1.0" }
bevy = { version = "0.6.0", default-features = false }
wasm-bindgen = "0.2.78"
rand = "0.8.4"
log = "0.4"
getrandom = {version = "0.2.0", features = ["js"]}
bevy_fly_camera =  {version = "0.8.0"}
