[package]
name = "desk-plugin-gamepad"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "desk-plugin-core", path = "../core", version = "0.1.0" }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "d65fbd7b9d4e7393acb18ee446b76ed28a549548", default-features = false }
qq_party_shared = { path = "../../../../qq_party_shared",features=["non_actor"] }
wasm-bindgen = "0.2.78"
rand = "0.8.4"
log = "0.4"
getrandom = {version = "0.2.0", features = ["js"]}