[package]
name = "desk-plugin-map"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", default-features = false }
bevy_ecs_tilemap = {version = "0.7.0", features = ["atlas"]}
#bevy_ecs_tilemap = { git ="https://github.com/alanpoon/bevy_ecs_tilemap",rev="5d9a504cd843f8d2f99e895b5848be5fc5f1bf71" ,features = ["atlas"]}
anyhow = { version = "1.0" }
tiled = { version = "0.9", default-features = false }
qq_party_shared = { path = "../../../../qq_party_shared" }
chrono = {version="0.4", features = ["wasmbind"]}