[package]
name = "desk-plugin-physics-rapier"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "desk-plugin-core", path = "../core", version = "0.1.0" }
bevy = { version = "0.8.1", default-features = false }
bevy_rapier2d = { git = "https://github.com/alanpoon/bevy_rapier", rev = "777ed4f493d2f15ddf8f025e25ae81c7b33f6f5e" }
qq_party_shared = { path = "../../../../qq_party_shared" }
wasm-bindgen = "=0.2.83"
rand = "0.8.4"
log = "0.4"
getrandom = {version = "0.2.0", features = ["js"]}